unify apostrophe character (from ’ to ')

--- a/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
@@ -44,7 +44,7 @@
 - On resource level
 - All numerical values including
   - All Application Insights data / telemetry
-  - System health from VM’s (uses HyperV metrics without any configuration)
+  - System health from VMs (uses HyperV metrics without any configuration)
 - Can be visualized & queried
 - 30 days free to store & query
 - E.g. requests and errors, average response time, infrastructure metrics
