--- a/AZ-303 Microsoft Azure Architect Technologies/2.2. Azure Storage.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.2. Azure Storage.md
@@ -3,7 +3,7 @@
 - PaaS (Platform as a Service)
 - Store files, messages, tables, and other types of information.
   - Subservices: Blob, File, Queue, and Table.
-- It’s also used by IaaS virtual machines, and other PaaS cloud services.
+- It's also used by IaaS virtual machines, and other PaaS cloud services.
 - Three main roles:
   - Storage for Virtual Machines
     - **Disks** are persistent block storage for Azure IaaS virtual machines.
