--- a/AZ-303 Microsoft Azure Architect Technologies/2.3. Azure Content Delivery Network (CDN).md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.3. Azure Content Delivery Network (CDN).md
@@ -29,7 +29,7 @@
 
 - Vendor specific settings
 - ***General web delivery***: Web content, website, applications, small images
-- ***General media streaming***: Live & video (so  you don’t need to change between live and VOD).
+- ***General media streaming***: Live & video (so  you don't need to change between live and VOD).
 - ***Video on demand media streaming***: Only for video streaming.
 - ***Large file download***: Large file download: > 10 MB.
 - Uses chunking
