--- a/AZ-303 Microsoft Azure Architect Technologies/2.4. Virtual Machines.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.4. Virtual Machines.md
@@ -9,13 +9,13 @@
 
 ## Grouping of VMs
 
-- ❗ Defined during creation of VM’s, cannot be applied to existing VMs.
+- ❗ Defined during creation of VMs, cannot be applied to existing VMs.
 
 ### Availability set
 
 - IaaS (Infrastructure as a Service)
 - Holds different tiers (instances) so Azure split them onto different places on hardware.
-- Pay only for VM’s
+- Pay only for VMs
 - Two logical grouping:
   - **Fault domains**: Grouping of domains with common power source + network switch. Separation protects you from hardware/network/power failures.
     - ❗ Max 3
@@ -70,11 +70,11 @@
 
 - 📝 Moving virtual machines between resource groups or subscriptions
   - Can do using Powershell or Azure Portal
-  - It’ll prompt to you to move all other dependencies as well.
+  - It'll prompt to you to move all other dependencies as well.
   - ❗ You cannot move Azure Managed Disks at this time.
   - New resource IDs are created as part of the move. After the VM has been moved, you will need to update your tools and scripts to use the new resource IDs.
 - 📝 Change VM size (scale up & down)
-  - ❗ If size is not supported on the physical cluster it’s hosted, it'll require deallocation of the VM
+  - ❗ If size is not supported on the physical cluster it's hosted, it'll require deallocation of the VM
   - ❗ If the new size for a VM in an availability set is not available on the hardware cluster currently hosting the VM, then all VMs in the availability set will need to be deallocated to resize the VM.
   - ❗ Deallocation may result in Dynamic IP change.
 - 📝 Download a VM ARM template
@@ -82,7 +82,7 @@
   - 💡 Storage account name must be unique so you can use something like: `[uniqueString(subscription().subscriptionId)]`
 - 📝 Swap OS Disk
   - You don't have to delete/recreate/de-allocate the VM.
-  - If it’s managed disk it must not be in use.
+  - If it's managed disk it must not be in use.
 
 ### Monitoring
 
