--- a/AZ-303 Microsoft Azure Architect Technologies/2.4.1. Virtual Machines - Deploy.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.4.1. Virtual Machines - Deploy.md
@@ -71,7 +71,7 @@
    - E.g. domain membership, virtual networks, storage account and availability set.
      - Availability Sets
        - VMs in same set placed at different physical hardware to help prevent downtime by Azure maintenance or regular cycles or failure.
-         - if there are multiple VMs in same set they don’t go down at the same time.
+         - if there are multiple VMs in same set they don't go down at the same time.
      - Auto-shutdown
        - When the VM is shut down automatically.
        - With "Azure Automation" and have it boot & shutdown on regular basis.
