--- a/AZ-303 Microsoft Azure Architect Technologies/2.4.2. Virtual Machines - Azure Backup & Azure Site Recovery & Snapshots.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.4.2. Virtual Machines - Azure Backup & Azure Site Recovery & Snapshots.md
@@ -25,7 +25,7 @@
        - When exactly? (ex. 11:00 AM Sunday)
    - You can back-up directly with "Back-up Now"
 3. Back-up virtual machine
-   - Azure VM Agent must be installed on VM, they’re already installed for VM’s from gallery.
+   - Azure VM Agent must be installed on VM, they're already installed for VMs from gallery.
    - Backing up VMs is a within region.
      - ❗ You cannot back up VMs from one region to a Recovery Services vault in another region.
      - ❗ For every Azure region that has VMs to be backed up, at least one Recovery Services vault must exist in that region.
