--- a/AZ-303 Microsoft Azure Architect Technologies/4.3. Azure Service Fabric.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/4.3. Azure Service Fabric.md
@@ -15,7 +15,7 @@
 ### Stateless services
 
 - Scale with partitioned *storage*
-  - Can have dependencies to caches, storages, queues etc., but they’re external services.
+  - Can have dependencies to caches, storages, queues etc., but they're external services.
     - As opposed to stateful applications have internal states in them e.g. databases, storages etc.
 - Increase reliability with *queues*
 - Reduce read latency with *caches*
@@ -33,7 +33,7 @@
   - through simple APIs that provide transactional guarantees backed by replication
   - available by Service Fabric without external store.
 - Applications can have their "hot" state and data managed within them for additional performance gains without sacrificing reliability, consistency, or availability
-- They’re deployed into same Service Fabric cluster with their dependencies.
+- They're deployed into same Service Fabric cluster with their dependencies.
 - Each of these services is independent with regard to scale, reliability, and resource usage, greatly improving agility in development and lifecycle management.
 - *Simplify application designs*: They remove the need for the additional queues and caches that have traditionally been required to address the availability and latency requirements of purely stateless applications.
 
