--- a/AZ-303 Microsoft Azure Architect Technologies/4.4. Using containers and orchestration.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/4.4. Using containers and orchestration.md
@@ -20,7 +20,7 @@
   - **Upgrades**: Offers multiple Kubernetes versions and upgrading with coordination of nodes to minimize disruption to running applications.
 - **HTTP application routing**
   - Configures ingress controller in AKS cluster.
-  - As applications are deployed, they’re publicly accessible with auto-configured DNS names.
+  - As applications are deployed, they're publicly accessible with auto-configured DNS names.
 - **GPU enabled nodes**: Supports GPU enabled node pools, provides single/multiple GPU enabled VMs.
 - **Development tooling integration**:
   - Tools like *heml*, *Draft*, *Visual Studio Code Kubernetes* works seamlessly.
