--- a/AZ-303 Microsoft Azure Architect Technologies/5.8. Develop database solutions.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/5.8. Develop database solutions.md
@@ -7,7 +7,7 @@
   - **SQL API**: Standard API.
     - `DocumentClient.CreateDocumentAsync`, `DocumentClient.ReadDocumentAsync`, `DocumentClient.ReadDocumentFeedAsync` *(read all documents)*, `DocumentClient.CreateDocumentQuery`, `DocumentClient.ReplaceDocumentAsync`, `DocumentClient.UpsertDocumentAsync`, `DocumentClient.DeleteDocumentAsync`.
   - **Azure Cosmos DB's API** for MongoDB
-  - **Gremlin API**: It’s is used to store and operate on graph data. Gremlin API supports modeling Graph data and provides APIs to traverse through the graph data.
+  - **Gremlin API**: It's is used to store and operate on graph data. Gremlin API supports modeling Graph data and provides APIs to traverse through the graph data.
   - **Cassandra API**: You can switch from using Apache Cassandra to using Azure Cosmos DB 's Cassandra API, by just changing a connection string.
   - **Table API**: Azure Table storage can migrate to Azure Cosmos DB by using the Table API with no code changes and take advantage of premium capabilities.
 - **Implement partitioning schemes**
