--- a/AZ-304 Microsoft Azure Architect Design/3.6. Backup (Azure Backup & Azure Site Recovery).md
+++ b/AZ-304 Microsoft Azure Architect Design/3.6. Backup (Azure Backup & Azure Site Recovery).md
@@ -5,7 +5,7 @@
 - Backup as a service (BaaS) solution with tools in the cloud and for on-premises
 - Data is stored in a Storage Account.
   - **Azure Backup Server**
-    - Can be installed on Azure or on-premises and can back up VM’s.
+    - Can be installed on Azure or on-premises and can back up VMs.
     - Inherits much of the workload backup functionality from Data Protection Manager (DPM).
     - Backs up in Site Recovery vault.
     - Can back up File servers, SQL Server, Hyper-V, Exchange Server
@@ -70,7 +70,7 @@
   - ***System backup***: Back up system state or run full, bare-metal backups of physical computers running Windows server or Windows client operating systems.
   - ***Hyper-V backup***: Back up Hyper-V virtual machines (VM) running Windows or Linux. You can back up an entire VM, or run application-aware backups of Microsoft workloads on Hyper-V VMs running Windows.
 - **Microsoft Azure Backup Server (MABS)**
-  - Can be installed on Azure or on-premises and can back up VM’s.
+  - Can be installed on Azure or on-premises and can back up VMs.
   - Inherits much of the workload backup functionality from *Data Protection Manager (DPM)*.
   - Backs up in Site Recovery vault.
   - Can back up File servers, SQL Server, Hyper-V, Exchange Server
@@ -102,7 +102,7 @@
 - You can alternatively run failover from "Replicated Items"
 - 📝 Select a Recovery Point to failover to
   - **Latest**
-    - Processes all data that’s sent to Site Recovery service.
+    - Processes all data that's sent to Site Recovery service.
     - Creates a recovery point for each virtual machine
       - Used by VM during failover.
     - Lowest data loss (RPO, recovery point objective)
