--- a/AZ-400 Microsoft Azure DevOps Solutions/1.1. Design a DevOps Strategy.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/1.1. Design a DevOps Strategy.md
@@ -23,7 +23,7 @@
   - **Deployment Frequency**
     - Increasing the frequency of deployments is often a critical driver in DevOps projects.
   - **Deployment Speed**
-    - As well as increasing how often deployments happen, it’s important to decrease the time that they take.
+    - As well as increasing how often deployments happen, it's important to decrease the time that they take.
   - **Deployment Size**
     - How many features, stories, and bug fixes are being deployed each time?
   - **Lead Time**
@@ -45,7 +45,7 @@
   - **Mean Time to Recover**
     - How quickly can you recover from a failure?
   - **Bug Report Rates**
-    - You don’t want customers finding bugs in your code.
+    - You don't want customers finding bugs in your code.
     - Is the amount they are finding increasing or decreasing?
   - **Test Pass Rates**
     - How well is your automated testing working?
