--- a/AZ-400 Microsoft Azure DevOps Solutions/10. Containers.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/10. Containers.md
@@ -22,7 +22,7 @@
   - Each line in file creates a layer
   - `FROM ubuntu`
     - The first statement in the Dockerfile. It refers to the parent image that this new image will be based upon
-    - An image that doesn’t have a parent is called a base image and `FROM scratch` can be used instead.
+    - An image that doesn't have a parent is called a base image and `FROM scratch` can be used instead.
 - Commands:
   - Build: `docker build -t container-name .` in folder where Dockerfile exists
   - Run: `docker run -d -p 8080:80 --name app-name container-name`
