--- a/AZ-400 Microsoft Azure DevOps Solutions/9.1. Git.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/9.1. Git.md
@@ -50,7 +50,7 @@
 - **Progressive-stability branching**
   - Long-running stable `master`
   - Another parallel branch named `develop` or `next` to test stability
-  - It isn’t necessarily always stable, but whenever it gets to a stable state, it can be merged into `master`
+  - It isn't necessarily always stable, but whenever it gets to a stable state, it can be merged into `master`
   - Used to pull in topic branches & test so they don't introduce bugs.
   - ![A "silo" view of progressive-stability branching](./img/progressive-stability-branching.png)
 
