--- a/AZ-900 Microsoft Azure Fundamentals/2.1. Purchasing & Licensing Options.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.1. Purchasing & Licensing Options.md
@@ -37,6 +37,6 @@
 ### Enterprise Agreement (EA)
 
 - For big enterprises
-- **EA Portal**: enterprise overview of all the spending and budgeting for organization’s Azure spend
+- **EA Portal**: enterprise overview of all the spending and budgeting for organization's Azure spend
 - **Discounts**: E.g. up to 30% cheaper virtual machines.
 - **Enterprise Level Capabilities and Features**: Access to enterprise-only service.
