--- a/AZ-900 Microsoft Azure Fundamentals/2.2. Azure Account, Subscription, Support and Billing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/2.2. Azure Account, Subscription, Support and Billing.md
@@ -9,7 +9,7 @@
 - 📝 Logical container used to provision resources in Azure such as virtual machines, databases and more.
 - 📝 When you create an Azure resource like a VM, you identify the subscription it belongs to
   - As you use the VM, the usage of the VM is aggregated and billed monthly.
-- 📝 Each subscription is a separate entity that can’t be merged.
+- 📝 Each subscription is a separate entity that can't be merged.
 
 ### Multiple Azure Subscriptions
 
