improve monitoring and add Azure Sentinel

--- a/AZ-104 Microsoft Azure Administrator/3. Monitoring.md
+++ b/AZ-104 Microsoft Azure Administrator/3. Monitoring.md
@@ -135,14 +135,15 @@
 - **ITSM**
   - IT as a Service
   - Helps to design, plan, deliver, operate, and control information technology (IT) services
-  - **Azure ITSM Connector**:
+  - **Azure ITSM Connector**
     - Bi-directional connection layer between and your ITSM tool(s)
     - Use cases:
       - Create ITSM work items based on Azure alerts.
       - Sync ITSM incident/change request data to Azure.
 - **SIEM**
   - Security information and event management
-  - Example: Splunk (there's an open source add-on to send to Event Hubs)
+  - E.g. Splunk (there's an open source add-on to send to Event Hubs)
+    - 💡 You could even use Azure Sentinel as a SIEM tool.
 
 ## Action groups
 
