--- a/AZ-303 Microsoft Azure Architect Technologies/3.3. Manage role-based access control (RBAC).md
+++ b/AZ-303 Microsoft Azure Architect Technologies/3.3. Manage role-based access control (RBAC).md
@@ -162,7 +162,8 @@
   - **Microsoft Cloud App Security (MCAS)** scans & classifies based on policies using **Azure Information Protection** classification labels.
     - E.g. confidentiality levels
 - Implement PIM for Azure AD administrator roles
-- Use Azure log integrations to send relevant Azure logs to your SIEM systems
+- Use Azure log integrations to send relevant Azure logs
+  - To e.g. Azure Sentinel or other SIEM systems
 
 ## Stage 4: Continue building defenses (after 6 months)
 
