--- a/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
+++ b/AZ-303 Microsoft Azure Architect Technologies/2.1. Monitoring.md
@@ -1,22 +1,25 @@
 # Monitoring
 
-- Monitoring
-  - Act of collecting & analyzing data to determine the performance, health, and availability of applications and their depended resources.
-  - 💡📝 Understanding the operation of applications and alerts helps fixing problems before they occur.
-- Services in Azure
-  - **Application Monitoring**: Application Insights
-  - **Deep Infrastructure Monitoring**: Log Analytics, Management Solutions, Network Monitoring, Service Map
-  - **Core Monitoring**: Azure Monitor, Advisor, Service Health, Activity Log
-  - **Shared Capabilities**: Alerts, Dashboards, Metrics Explorer
-- Monitoring costs
-  - Use [Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/) for a specific resource.
-  - Review estimated costs when creating a resource
-  - See spent costs through Subscription blade
-    - You can task resources Cost analysis with e.g. *costCenter: marketing* to filter in cost analysis view.
-      - 💡 Recommended to tag & export.
-    - You can see your bill in "Invoices", opt-in for PDF invoices & download (more options available in *Azure Account Center*)
-    - External services billed separately
-  - Get notifications through Azure Advisor or Azure Cost Management for anomalies and overspending risks.
+- Act of collecting & analyzing data to determine the performance, health, and availability of applications and their depended resources.
+- 💡📝 Understanding the operation of applications and alerts helps fixing problems before they occur.
+
+## Azure monitoring services
+
+- **Application Monitoring**: • Application Insights
+- **Deep Infrastructure Monitoring**: • Log Analytics • Management Solutions • Network Monitoring • Service Map
+- **Core Monitoring**: • Azure Monitor • Advisor • Service Health • Activity Log
+- **Shared Capabilities**: • Alerts • Dashboards • Metrics Explorer
+
+## Azure monitoring costs
+
+- Use [Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/) for a specific resource.
+- Review estimated costs when creating a resource
+- See spent costs through Subscription blade
+  - You can task resources Cost analysis with e.g. *costCenter: marketing* to filter in cost analysis view.
+    - 💡 Recommended to tag & export.
+  - You can see your bill in "Invoices", opt-in for PDF invoices & download (more options available in *Azure Account Center*)
+  - External services billed separately
+- Get notifications through Azure Advisor or Azure Cost Management for anomalies and overspending risks.
 
 ## Azure Monitor
 
@@ -24,10 +27,10 @@
 - Pipeline for metric log data coming from any Azure resource provider.
 - Fastest telemetry pipeline: Faster than Log Analytics.
 - Collected data is saved in Log Analytics to analyze, monitor, visualize metrics and query and analyze logs.
-  - *Visualize*: Dashboard, Views, Power BI, Workbooks
-  - *Analyze*: Metrics Explorer, Log Analytics
-  - *Respond*: Alerts, Autoscale
-  - *Integrate*: Event Hubs, Logic Apps, Ingest & Export APIs
+  - *Visualize*: • Dashboard • Views • Power BI • Workbooks
+  - *Analyze*: • Metrics Explorer • Log Analytics
+  - *Respond*: • Alerts • Autoscale
+  - *Integrate*: • Event Hubs • Logic Apps • Ingest & Export APIs
 - You can use alerts to proactively notify you based on rules with Azure Alerts.
 - You can access through
   - Azure Insight & Analytics (OMS portal that's now legacy)
@@ -64,20 +67,20 @@
   - Every API call to Azure Resource Manager
   - E.g. create virtual machine or delete network security group
 - **Service health**
-  - Any service health incidents occured in Azure
-  - Come in 5 varieties: Action Required, Assisted Recovery, Incident, Maintenance, Information, or Security.
+  - Any service health incidents occurred in Azure
+  - Come in 5 varieties: • Action Required • Assisted Recovery • Incident • Maintenance • Information • Security.
   - E.g. SQL Azure in East US is experiencing downtime.
-- **Resourche health**
-  - Status of resources: Available, Unavailable, Degraded or Unknown.
+- **Resource health**
+  - Status of resources: • Available • Unavailable • Degraded • Unknown
   - E.g. Virtual Machine health status changed to unavailable
 - **Alert**
   - All activations of Azure alerts.
-  - E.g. CPU % on myVM has been over 80 for the past 5 minutes
+  - E.g. CPU % on a VM has been over 80 for the past 5 minutes
 - **Autoscale**
   - Events in autoscale engine defined by your settings.
   - E.g. Scale up action failed
 - **Recommendation**
-  - How to better uilize your resources.
+  - How to better utilize your resources.
 - **Security**
   - Events by Azure Security Center
   - E.g. Suspicious double extension file executed.
@@ -102,7 +105,8 @@
 - Flow of alerts
   - Set-up alert rule
     - Target resource (e.g. storage account)
-      - **Signal**: Types are Metric, Activity log, Application Insights and Log
+      - **Signal**:
+        - Types are Metric, Activity log, Application Insights and Log
         - You can have multi-dimensional metrics & monitor multiple metrics with a single rule (currently up to two)
     - **Criteria**
       - Logic test: e.g. six-hour period when capacity is over 10 MB
@@ -130,28 +134,60 @@
 ## Log Analytics
 
 - PaaS (Platform as a Service)
-- Log Analytics is renamed to "Logs" and "Log Search"
-- You collect, correlate, search, and act on log and performance with data with any schema.
+- It's also referred as (newer names)
+  - **Azure Monitor Logs**
+    - Azure Monitor log data is stored in Log Analytics
+    - The term is changed from "Log Analytics" to "Azure Monitor Logs" ([see](https://docs.microsoft.com/en-us/azure/azure-monitor/terminology#log-analytics))
+  - **Log Search**
+    - "Log Search" interface in Azure Monitor (Monitor -> Logs)
+    - Or Log Analytics Workspace -> Logs
+- Two main features
+  - Log Analytics Workspace where Azure Monitor stores its data
+  - Log search feature; collect, correlate, search, and act on data with any schema.
 - Business value:
   - *Assessing updates*: From logs can guess average patching time
   - *Change tracking*: Abnormal behavior from a specific account by tracking changes throughout the environment
-- Can be pulled from:
-  - Connected Azure sources e.g. IIS logs, custom text logs with custom fields, error level etc.
-  - Office 365, Azure Automations, Back-ups (fully integrated)
-- Push from on-prem/cloud Linux & windows (already installed in cloud Windows VMs) with an agent
-  - SCOM (System Center Operations Manager) agents communicate with SCOM Server over TLS 1.2 which forward events and performance data to Log Analytics.
-    - You can use script via Azure Automation DSC (desired state configuration)
-- Query with a pipe-through language
-  - Each data source has documentation (description & name) of its properties.
-  - Main query tables: *Heartbeat, Perf, Usage, Event, Syslog, Alert*.
-  - E.g.: `Event | where (EventLevelName == "Error") | where (TimeGenerated > ago(1days)) | summarize ErrorCount = count() by Computer | top 10 by ErrorCount desc`
-  - Can generate charts  `| render timechart` that can be pinned to dashboard.
-- You can connect to Activity Logs in Activity Logs section and query with `AzureActivity`
 - Free to store logs for 90 days of charge
   - You can export to Excel, PowerBI, or use API to send data or get.
-- Applies if in same subscription, or in same Azure Active Directory.
-  - Collect data across subscriptions
-    - In customer subscription
-      - Activity log (*export button*) => Event Hub
-    - In Service provider subscription
-      - Logic App (*When events are available in Event Hub -> Parse JSON (Body) -> Compose (Select Body in inputs) -> Send Data (Azure Log Analytics Data Collector)*)=> Log Analytics
+
+### Sending data to Log Analytics
+
+- Log analytics uses push-model i.e. data is pushed to it.
+- Data can be pushed from integrated sources including
+  - Connected Azure sources e.g. IIS logs, custom text logs with custom fields, error level etc.
+  - Office 365, Azure Automation, Back-ups
+  - ❗️ You cannot change schema on ingestion time for integrated resources, only on query time.
+- Data can also be pushed Linux & Windows systems with an agent
+  - Agents include
+    - Log analytics agent
+    - Operations Manager
+      - Allows using existing investments with SCOM (System Center Operations Manager)
+      - SCOM agents communicate with SCOM Server over TLS 1.2 which forward events and performance data to Log Analytics.
+  - You can install agents using a script via Azure Automation DSC (desired state configuration)
+    - Agents are already installed in cloud Windows VMs
+- You can also use Log Analytics REST APIs to send custom data with any schema you want
+
+### Collect data across subscriptions
+
+- Log analytics applies if in same subscription, or in same Azure Active Directory tenant.
+- So single Log Analytics workspace can monitor across under same tenant.
+- To collect data across subscriptions and tenants:
+  - In customer subscription
+    - Activity log (*export button*) => Event Hub
+  - In Service provider subscription
+    - Logic App (*When events are available in Event Hub -> Parse JSON (Body) -> Compose (Select Body in inputs) -> Send Data (Azure Log Analytics Data Collector)*)=> Log Analytics
+- Azure Monitor Logs support query across multiple Log Analytics workspaces across subscriptions
+  - E.g. `app("/subscriptions/b459b4f6-912x-46d5-9cb1-b43069212ab4/resourcegroups/Fabrikam/providers/microsoft.insights/components/fabrikamapp").requests | count`
+  - Read more on [Microsoft Docs](https://docs.microsoft.com/en-us/azure/azure-monitor/logs/cross-workspace-query)
+
+### Querying Log Analytics
+
+- Each data source has documentation (description & name) of its properties.
+- 📝 Main query tables: *Heartbeat, Perf, Usage, Event, Syslog, Alert*.
+- You can connect to Activity Logs in Activity Logs section and query with `AzureActivity`
+
+#### Kusto Query Language (KQL)
+
+- A pipe-through language to query log analytics data
+- E.g.: `Event | where (EventLevelName == "Error") | where (TimeGenerated > ago(1days)) | summarize ErrorCount = count() by Computer | top 10 by ErrorCount desc`
+- Can generate charts `| render timechart` that can be pinned to dashboard.
