--- a/AZ-304 Microsoft Azure Architect Design/3.7. Monitoring.md
+++ b/AZ-304 Microsoft Azure Architect Design/3.7. Monitoring.md
@@ -5,7 +5,7 @@
 - Inbuilt in Portal (*Monitor -> Network*)
 - Features
   - **Topology**: e.g. VNETs, subnets, VMs, NICs
-  - **Variable Packet Capture**: Captures TCP packages at NIC level as wireshark files.
+  - **Variable Packet Capture**: Captures TCP packages at NIC level as Wireshark files.
   - **IP Flow Verify**: Troubleshoots NSG
   - **Next hop**: Troubleshoots route tables
   - **Connection troubleshoot**: Why it does not connect?
@@ -44,7 +44,7 @@
 ### Just-in-time (JIT) virtual machine (VM) access
 
 - Can be used to lock down inbound traffic to VMs
-- Reducies exposure to attacks while providing easy access to connect to VMs when needed.
+- Reduces exposure to attacks while providing easy access to connect to VMs when needed.
 - Flow
   1. A user requests access to a VM
   2. Azure Defender checks that the user has Role-Based Access Control (RBAC) permissions that permit them to successfully request access to a VM.
@@ -54,56 +54,103 @@
 
 ## Azure Monitor
 
+- Helps you monitor your applications and resources
+- All data connected by Azure Monitor fits into two types: [Logs](#azure-logs), [Metrics](#azure-metrics)
+- Log Analytics and Application Insights have been combined into Azure Monitor
+  - Log analytics was a product before, now just referred as a feature.
+- 🤗 In 2018 "Operations Management Suite (OMS)" and [its services](https://docs.microsoft.com/en-us/azure/azure-monitor/terminology#april-2018---retirement-of-operations-management-suite-brand) were rebranded into Azure Monitor and it's no longer available.
+
 ### Azure Logs
 
-- Deprecated names:
-  - Operations Management Suite (OMS)
-  - Log Analytics
-- Monitors your cloud and on-premises environments to maintain their availability and performance.
-- In portal:
-  - Log searches
-  - Graphical views of your most valuable searches
-  - Solutions which provide additional functionality and analysis tools.
+- Allows you to monitor log data
+- Log data can be from on-premises or cloud resources
+- Helps maintain resource availability and performance.
+- It allows you to run queries and list or visualize results
+- Reads data from a [log analytics workspace](#log-analytics-workspace)
 
-### Metrics
+#### Log Analytics workspace
 
-- Also called performance counters
-- Tasks
+- Logical storage unit where log data is collected and stored
+- Basic management unit of Azure Monitor Logs
+- Retention: min 31 days (default), up to 730 days (paid)
+- Supports sending custom logs through
+  - [Log Analytics Agent](#log-analytics-agent)
+  - [HTTP Data Collector API](https://docs.microsoft.com/en-us/azure/azure-monitor/logs/data-collector-api) (previously known as Log Analytics Data Collector API)
+
+##### Queries in Log Analytics workspace
+
+- Allows to query logs using KQL (Kusto Query Language)
+- Allows you to save save queries
+- You can filter, sort, group query results or render charts based on them
+
+### Azure Metrics
+
+- Feature of Azure Monitor that collects numeric data
+- Save data into a time series database
+- **Metrics**
+  - Numerical values that are collected at regular intervals
+  - Describe some aspect of a system at a particular time
+  - Also called performance counters
+- There is no need to set up additional diagnostics for metrics, nor opt-in for the data.
+- Frequency of one minute.
+- Can be viewed on portal using Azure metrics explorer
+- Retention is often 93 days
+  - ❗️ But only lets you view 30 days at a time
+  - Archive metrics to storage for longer retention
+    - Can be configured in the settings for the resource.
+- **Multi-dimensional metrics**
+  - Some metrics can also name-value pair attributes (called dimensions)
+  - Allows further segmentation
+- Use-cases
   - Track the performance of your resource (such as a VM, website, or logic app) by plotting its metrics on a portal chart and pinning that chart to a dashboard.
   - Perform advanced analytics or reporting on performance or usage trends of your resource.
   - Get notified of an issue that impacts the performance of your resource when a metric crosses a certain threshold.
   - Archive the performance or health history of your resource for compliance or auditing purposes.
   - You can choose to stream this information to an event hub.
     - Doing so allows you to route them to Azure Stream Analytics for near-real-time analysis.
-- There is no need to set up additional diagnostics for metrics, nor opt-in for the data.
-- Frequency of one minute.
-- Some metrics available can also have name-value pair attributes
-  - Known as ***dimensions***
-  - Allows further segmentation
-- Users to access up to 30 days of history for each metric.
-  - You can also choose to achieve metrics to storage if you need to retrain them for longer than the archive period.
-    - You configure it in settings for the resource.
 
 ### Agents
 
-#### Log Analytics Agent
+- Used for collecting data from compute resources and sending to Azure
+- Helps measuring performance and availability of guest OS
 
-- Can be installed on:
-  - Azure VMs using the Azure Log Analytics VM extension for Windows and Linux
+### Azure Monitor agent
+
+- Also known as AMA
+- Will eventually replace and consolidate [Log Analytics Agent](#log-analytics-agent) and [Diagnostic extension](#azure-diagnostics-extension)
+- Sends data to [Azure Monitor Metrics](#azure-metrics) or [Log Analytics workspace](#log-analytics-workspace)
+
+### Log Analytics Agent
+
+- Sends data to [log analytics workspace](#log-analytics-workspace)
+- Collects custom logs, IIS logs, performance counters, syslog, windows event logs.
+- Can be installed on Azure VMs using the Azure Log Analytics VM extension for Windows and Linux
 - For machines in a hybrid environment using setup, command line, or with Desired State Configuration (DSC) in Azure Automation.
 - Outbound connection over TCP port 443
-- If no connection to internet:
-  - The Log Analytics gateway is an HTTP forward proxy that supports HTTP tunneling using the HTTP CONNECT command.
-  - Agents sends their data to gateway
-- Sends data to log analytics workspace
-  - The Log Analytics retention settings allow you to configure a minimum of 31 days (if not using a free tier) up to 730 days.
-- Collects custom logs, IIS logs, performance counters, syslog, windows event logs.
+
+#### Log Analytics Gateway
+
+- Formerly known as **OMS gateway**
+- Allows sending logs from computers that are not connected to internet
+- [Agents](#log-analytics-agent) sends their data to gateway, gateway forwards it to [log analytics workspace](#log-analytics-workspace)
+- HTTP forward proxy that supports HTTP tunneling using the `HTTP CONNECT` command
+- 💡 If long sending machines have no connection to internet use Log Analytics Gateway
+- ❗️ Computer that has gateway installed required Internet access as Private Link (ExpressRoute cables to Azure) is not supported for it (see [supported services](https://docs.microsoft.com/en-us/azure/private-link/private-endpoint-overview#private-link-resource))
 
 #### Azure Diagnostics extension
 
 - Collection of diagnostic data on a deployed application
-- Supports azure Cloud Service (classic) Web and Worker Roles, Virtual Machines, Virtual Machine scale sets, and Service Fabric.
-- Collects: Performance counter metrics, Application logs, Windows Event logs, .NET EventSource logs, IIS Logs, Manifest based ETW logs, Crash dumps (logs), Custom error logs, Azure Diagnostic infrastructure logs.
+- Supports
+  - Azure cloud service (classic) Web and Worker roles
+  - Virtual machines
+  - Virtual machine scale sets
+  - Service fabric
+- Can send data to
+  - [Azure Monitor Metrics](#azure-metrics)
+  - Event hubs (for sending data outside Azure)
+  - Azure Blob Storage
+  - [Application Insights](#application-insights)
+- Collects: • Performance counter metrics • Application logs • Windows Event logs • .NET EventSource logs • IIS Logs • Manifest based ETW logs • Crash dumps (logs) • Custom error logs • Azure Diagnostic infrastructure logs.
 - Data storage
   - The extension stores its data in an Azure Storage account that you specify.
   - You can also send it to Application Insights.
@@ -117,6 +164,9 @@
 - It will automatically detect performance anomalies.
 - It integrates with your DevOps process, and has connection points to a variety of development tools.
 - It can monitor and analyze telemetry from mobile apps by integrating with Visual Studio App Center and HockeyApp.
+- Saves data either in
+  - Classic (application insights workspace)
+  - Or in [log analytics workspace](#log-analytics-workspace)
 
 ## Azure Advisor
 
@@ -135,11 +185,13 @@
 - Helps you prepare for upcoming planned maintenance.
 - Alerts you and your teams via targeted and flexible notifications.
 - Service Health tracks three types of health events:
-  - **Service issues** : Problems in the Azure services that affect you right now.
-  - **Planned maintenance** : Upcoming maintenance that can affect the availability of your services in the future.
-  - **Health advisories:** Changes in Azure services that require your attention.
-    - E.g. Azure features are deprecated
-    - E.g. you exceed a usage quota.
+  - **Service issues**
+    - Problems in the Azure services that affects customers right now.
+  - **Planned maintenance**
+    - Upcoming maintenance that can affect the availability of services in the future
+  - **Health advisories**
+    - Changes in Azure services that require attention
+    - E.g. • Azure features are deprecated • You exceed a usage quota
 - Data is presented at
   - Azure Portal: Personalized Service Health Dashboard
   - Azure Monitor: Service Health Alerts
@@ -151,9 +203,5 @@
 - Works with cloud-based or on-premises data.
 - Has a multitude of Azure connections available.
 - Shape and refine your data to build customized reports.
-- Products: Power BI Desktop, Power BI Pro, Power BI Premium, Power BI Mobile, Power BI Embedded, Power BI Report Server
-
-### Azure SQL Database and Power BI
-
-- You can start with a straightforward connection to an Azure SQL Database, and create reports to monitor the progress of your business.
-- E.g: "Get Data dialog": Within the same Query you can connect to your Azure SQL Database, your Azure HDInsight data source, and your Azure Blob Storage (or Azure Table Storage), then select only the subsets within each that you need, and refine it from there.
+- Products: • Power BI Desktop • Power BI Pro • Power BI Premium • Power BI Mobile • Power BI Embedded • Power BI Report Server
+- You can use data sources from Azure e.g. Azure SQL Database, Azure HDInsight, Azure Blob Storage and many more.
