--- a/AZ-900 Microsoft Azure Fundamentals/1.1. Benefits of Cloud Computing.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.1. Benefits of Cloud Computing.md
@@ -6,9 +6,9 @@
 
 ## Cost effective
 
-- Provides **pay-as-you-go** or **consumption-based** pricig model.
+- Provides **pay-as-you-go** or **consumption-based** pricing model.
   - No upfront infrastructure costs
-  - No need to purchase and manage costly infrastructure that you may not use to its fullest
+  - No need to purchase and manage costly infrastructure/hradware that you may not use to its fullest
   - The ability to pay for additional resources only when they are needed
   - The ability to stop paying for resources that are no longer needed
 - Enables better cost predictions using pricing of individual resources/services.
