Update 5.1. Azure Policy & Azure Blueprints.md
typing mistake

--- a/AZ-900 Microsoft Azure Fundamentals/5.1. Azure Policy & Azure Blueprints.md
+++ b/AZ-900 Microsoft Azure Fundamentals/5.1. Azure Policy & Azure Blueprints.md
@@ -11,14 +11,14 @@
 - 📝 Allows your infrastructure stays compliant with e.g.
   - corporate standards, cost requirements, service-level agreements.
 - E.g. a policy that allows virtual machines of only a certain size in your environment.
-- Evaluates bot new and existing resources for compliance.
+- Evaluates both new and existing resources for compliance.
   - Can deny new uncompliant resources from being created
   - Can stop existing resources from being updated to an uncompliant state.
     - 📝❗ Does not remove uncompliant resources!
   - Can only audit existing & new resources
     - Identifying non-compliant resources
     - ![Policy Compliance](./img/policy-compliance.png)
-  - Can alter alter the resource properties.
+  - Can alter the resource properties.
 
 ### Azure Policy vs RBAC
 
