fix: spelling mistake

--- a/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/2. Azure DevOps Overview.md
@@ -23,7 +23,7 @@
   - Module is a .DLL that include the code for Cmdlet
   - Cmdlet is loaded by loading all its modules
   - `Get-Module` to get list of all loaded modules.
-- Azure PowerShell is a PowerShell module that can be added to Windows PowerShell & PowerShhell core
+- Azure PowerShell is a PowerShell module that can be added to Windows PowerShell & PowerShell core
   - Accessible via browser using Azure Cloud Shell
 - 💡 Can store templates or scripts on Azure Storage account and securing them with SAS token
 
