Update 1.3.1. Compute & Serverless & Storage.md
spell mistake ;p

--- a/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
@@ -2,7 +2,7 @@
 
 - Cloud is like ***electricity***
   - only pay for what you need
-  - don't worry about how & when power plants upgrade to the latest technologicy.
+  - don't worry about how & when power plants upgrade to the latest technology.
   - you don't manage scaling, e.g. many people can move to town and light will stay on
 - **Cloud computing**
   - Solves management of hardware and software
