enhanced definitions & Fix spelling
enhanced definitions & Fix spelling

--- a/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
@@ -13,9 +13,9 @@
   - Provides cloud computing services
   - E.g. Microsoft, Amazon, Google
   - Typical services:
-    - **Compute power**: such as Linux servers or web applications
-    - **Storage**: such as files and databases
-    - **Networking**: such as secure connections between the cloud provider and your company
+    - **Compute power**: such as Linux/Windows servers or web applications
+    - **Storage**: such as files and databases and blobs
+    - **Networking**: such as secure connections between the cloud provider and your company/datacenter
     - **Analytics**: such as visualizing telemetry and performance data
 
 ## Compute Power
@@ -23,7 +23,7 @@
 - Choose how you want work to be done based on your resources and needs.
 - **Virtual Machines (VM)**
   - Emulation of a computer, like your desktop / laptop
-  - Includes operating systtem and hardware, you can install any software on it.
+  - Includes operating system and hardware, you can install any software on it.
   - More control and responsibility over maintenance.
   - Cloud provider runs it for you in one of its datacenters
     - Often sharing that server with other VMs
@@ -32,16 +32,16 @@
   - Similar to VM but they don't require guest operating system
     - They can run on different guest systems
       - Highly portable, can run on-premises or in the cloud with often no changes to application.
-    - Takes few seconds to start up as there's no OS to initialize
+    - Takes few seconds/lesser time to start up as there's no OS to initialize
   - Application and its dependencies are packaged into a container
   - **Docker**
     - Open source
-    - The leading platform for manaing containers.
+    - The leading platform for managing containers.
 
 ## Serverless computing
 
 - Lets you run application code without creating, configuring, or maintaining a server
-- Your application is broken into separate functions that run when triggered by some action
+- Your application is broken into separate functions that runs when triggered by some action/event
 - Good for automation e.g. serverless process that automatically sends an email confirmation after a customer makes an online purchase.
 - pay for the processing time used by each function as it executes.
   - ❗On contrast, VMs and containers are running even if the applications on them are idle.
