--- a/AZ-900 Microsoft Azure Fundamentals/1.4. Cloud Compliance.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.4. Cloud Compliance.md
@@ -57,7 +57,7 @@
 ### SOC 1, 2, and 3
 
 - SOC = Service Organization Controls
-- Cloud services udited at least annually against the SOC report framework by independent third-party auditors.
+- Cloud services audited at least annually against the SOC report framework by independent third-party auditors.
 - Audit covers controls for data security, availability, processing integrity, and confidentiality
   - as applicable to in-scope trust principles for each service.
 
