Update 3. Azure Services.md

--- a/AZ-900 Microsoft Azure Fundamentals/3. Azure Services.md
+++ b/AZ-900 Microsoft Azure Fundamentals/3. Azure Services.md
@@ -1,6 +1,6 @@
 # Azure Services
 
-- 📝 Microsoft notifies at least 1 months before ending support for for an Azure service that does NOT have a successor service.
+- 📝 Microsoft notifies at least 1 months before ending support for an Azure service that does NOT have a successor service.
 - **App Hosting**
   - Run entire your web application on a managed platform on Linux & Windows
   - In Azure Marketplace there are huge range of third party products you can run on Azure
