--- a/AZ-104 Microsoft Azure Administrator/2.2. Governance - Azure AD.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2. Governance - Azure AD.md
@@ -33,7 +33,7 @@
 ## Custom Domains
 
 - You initially get `tenantname.onmicrosoft.com`
-- Custom names must be fully qualified: Not a local name but an online namae.
+- Custom names must be fully qualified: Not a local name but an online name.
 - Ownership must be verified
   - Microsoft gives text records (TXT or MX)
   - You put text record in DNS to get verified
@@ -122,7 +122,7 @@
 - Investigations
   - Recieve notifications
   - Workflows *(when, who, what happened)*
-  - Analysis: How can you apply policies to prevent future events?
+  - Analysis: How can you apply policies to prevent such future events?
 - Policies
   - *User risk policy*: E.g. if user risk event is high, allow access but require password change
   - *Sign-in risk*: E.g. if sign-in risk is medium, allow access but require MFA.
