updated some line and typo

--- a/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
@@ -41,13 +41,13 @@
 - Scenarios
   - Allows users to change their passwords
   - If you cannot log in somehow
-  - Helpws with account lockout
+  - Helps with account lockout
 - Authentication methods
   - Types:
-    - Text message/Phoen call
+    - Text message/Phone call
     - Secondary email
     - Security questions
-  - Administrator requires one or more.
+  - Administrator requires one or more methods.
 - Manage in portal
   - Steps: Active Directory → Password Reset
   - Configurations
@@ -55,23 +55,23 @@
       - You can enable for all users or selected users.
       - 💡 Good to first enable for a pilot group to see how it works.
     - **Registration**
-      - Require users to register when signin in
+      - Require users to register when signing in
         - Prompts user to fill information for authentication methods.
       - After how long user will be prompted to confirm authentication method information
     - **Notifications**
       - Notify users on password resets
-      - Notify all admins when other admins reset their password
+      - Notifies all other admins when an admin resets his password
 
 ### User settings
 
 - Enterprise applications
   - Users can consent to apps accessing company data on their behalf (yes/no)
     - Yes; users can consent to allow third party and multi-tenant applications to consent on their own behalf.
-  - Users can add galery apps to theri Access Panel
+  - Users can add gallery apps to their Access Panel
     - No; as an administrator you have to manually integrate the applciations through Access Panel
 - App registrations
   - Users can register applications (yes/no)
-    - Yes; non administrations can register applications to be used within the directory, no; only administrators can do it
+    - Yes; non administratiors can register applications to be used within the directory, no; only administrators can do it
 
 ## Groups
 
