--- a/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
@@ -28,7 +28,7 @@
   - Cloud provider runs it for you in one of its datacenters
     - Often sharing that server with other VMs
 - **Containers**
-  - Consistent, isolated exeuction environment for application
+  - Consistent, isolated execution environment for application
   - Similar to VM but they don't require guest operating system
     - They can run on different guest systems
       - Highly portable, can run on-premises or in the cloud with often no changes to application.
