describe more settings in Azure Repos

--- a/AZ-400 Microsoft Azure DevOps Solutions/9.3. Azure Repos.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/9.3. Azure Repos.md
@@ -35,7 +35,7 @@
 - **Project Admins**: Create, delete and rename repositories.
 - You can modify permissions in each group.
 
-#### Branch policies
+### Branch policies
 
 - ***Require minimum number of reviewers*** for pull requests
 - ***Check for linked work items***: Enforce traceability to check for linked work items on PR's
@@ -52,10 +52,33 @@
   - completing pull requests
   - or pushing
 
+### Branch locks
+
+- Block updates to a Git branch by preventing
+  - Other users from changing the existing commit history
+  - Any new commits from being added to the branch by others
+- 💡 Use with [branch policies](#branch-policies) and pull requests to ensure no changes are being done without review/approval
+- Locks can be removed by
+  - The user who locked the branch
+  - User with ["Remove Other's Lock permissions"](https://docs.microsoft.com/en-us/azure/devops/repos/git/set-git-repository-permissions?view=azure-devops#git-repository)
+- 👀 Read more: [Microsoft Docs](https://docs.microsoft.com/en-us/azure/devops/repos/git/lock-branches)
+
+## Repository settings
+
+- Validates commit information against given patterns or limits
+- Can be found on portal: "Project settings -> Repositories"
+- Include
+  - Commit author email validation
+  - File path validation
+  - Case enforcement by blocking that change name casing on paths/branches/tags
+  - Reserved names by blocking reserved names/incompatible characters
+  - Maximum path length
+
 ## Authenticating with Git
 
 - You can authenticate using:
   - [SSH](https://docs.microsoft.com/en-us/azure/devops/repos/git/use-ssh-keys-to-authenticate)
+    - SSH authentication can be disabled on organization level with [organization settings](https://docs.microsoft.com/en-us/azure/devops/organizations/settings/about-settings?view=azure-devops#user-settings)
   - [Git Credential Managers](https://docs.microsoft.com/en-us/azure/devops/repos/git/set-up-credential-managers?view=azure-devops)
     - 💡 Recommended
     - Supports MFA
