Update 4.4. Identity and Access (Azure AD).md
typo dow -> down

--- a/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
+++ b/AZ-900 Microsoft Azure Fundamentals/4.4. Identity and Access (Azure AD).md
@@ -50,7 +50,7 @@
   - = more passwords & harder for users to remember them
   - = more risk of credential-related security incident
   - = harder management: more account lockouts and password reset requests
-    - if a user leaves an organization = all identities must be tracked dow
+    - if a user leaves an organization = all identities must be tracked down
 - Single sign-on (SSO) = single identity
   - = one password to access across all applications
   - 📝 less effort to manage e.g. if someone leaves an organization
