Update 1.3.1. Compute & Serverless & Storage.md
Edited a typo in 1.3.1 Storage "addresbook" to "address book"

--- a/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1.3.1. Compute & Serverless & Storage.md
@@ -52,5 +52,5 @@
   - E.g. when leaving a voicemail
 - Cloud providers offers different services
   - e.g. for storing a text you can use file on disk.
-  - e.g. for relationships in addresbook, you can use a database
+  - e.g. for relationships in address book, you can use a database
 - Advantage of a cloud-based data storage is you can scale to meet your needs.
