Update 6.1. Networking - Virtual Network (VNet).md
I would say "per region per subscription" means you can have up to 1000 VNets in each region used in a single subscription.

--- a/AZ-104 Microsoft Azure Administrator/6.1. Networking - Virtual Network (VNet).md
+++ b/AZ-104 Microsoft Azure Administrator/6.1. Networking - Virtual Network (VNet).md
@@ -12,7 +12,7 @@
 - Traffic filtering
   - NSGs
   - Network Virtual Appliances
-- ❗ 1000 VNets allowed per subscription
+- ❗ 1000 VNets allowed per region per subscription
 - ❗ A resource can only be created in a virtual network that exists in the same region and subscription as the resource.
 - **Why multiple VNets?**
   - Saving money
