Update 1. Cloud Basics.md
Missing word on line 14 (deploy).

--- a/AZ-900 Microsoft Azure Fundamentals/1. Cloud Basics.md
+++ b/AZ-900 Microsoft Azure Fundamentals/1. Cloud Basics.md
@@ -11,7 +11,7 @@
     - You can treat cloud resources like you would your resources in your own data center. When you're done using them, you give them back
 - The real value of the cloud: speed
   - Enables you to quickly solve your business challenges and bring cutting edge solutions to your users.
-  - In less time than it takes to eat lunch, you can create & a website on Azure
+  - In less time than it takes to eat lunch, you can create & deploy a website on Azure
 - A foundational building block of everything from digital transformation to the next big startup.
 
 ## Why move to the cloud
