--- a/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
+++ b/AZ-104 Microsoft Azure Administrator/2.2.1. Governance - Azure AD - Entities.md
@@ -123,7 +123,7 @@
 
 #### Join Device
 
-- Corparate owned assets that you want to manage
+- Corporate owned assets that you want to manage
 - E.g. Windows 7 or Windows 10
 - You get some benefits e.g. single sign on.
 
