Improve VNet peering

--- a/AZ-104 Microsoft Azure Administrator/6.1. Networking - Virtual Network (VNet).md
+++ b/AZ-104 Microsoft Azure Administrator/6.1. Networking - Virtual Network (VNet).md
@@ -87,7 +87,7 @@
       - Still uses Azure DNS when necessary
       - Used when e.g. site-to-site or point-to-site connections, it'll affect all VMs.
   - *Diagram*
-    - You can enable network watcher here.
+    - You can enable [Network Watcher](./6.1.1.%20Networking%20-%20Virtual%20Network%20(VNet)%20-%20Connecting%20VNets.md#network-watcher) here.
     - You then load in subscription or RG and enable.
     - It shows topology
 
