--- a/AZ-104 Microsoft Azure Administrator/6.1.1. Networking - Virtual Network (VNet) - Connecting VNets.md
+++ b/AZ-104 Microsoft Azure Administrator/6.1.1. Networking - Virtual Network (VNet) - Connecting VNets.md
@@ -25,24 +25,16 @@
 
 #### VNet peering
 
-- ❗ Seamless connection between two Azure VNets.
+- Seamless connection between two Azure VNets.
   - The peered networks appear as one, for connectivity purposes.
-  - Name resolution does not flow, requires own DNS zone
+  - ❗ Name resolution does not flow, requires own DNS zone
 - Runs on Azure backbone
-- 💡 You can peer across regions and subcriptions
+- 💡 You can peer across regions and subscriptions
 - Peering can overcome misplaced VMs
-- Save money with service chaining (e.g. services' communication are chained through a subnet)
+- Helps to optimize costs through *service chaining*
+  - I.e. services' communication are chained through a subnet
 - ❗ Peering must be done on both sites
-  - VNet1 <=> VNet2 and VNet2 <=> VNet1
-- ***Configuration***
-  - **Allow forwarded traffic**
-    - Am I peering from a hub VNet that'll have IP-forwarder?
-    - Allow peers (other VNets) to forward traffic to go through.
-  - **Allow gateway transit**
-    - Am I hosting a VPN gateway?
-  - **Use remote gateways**
-    - Is this network use peers gateway?
-    - ❗ VNets must be in same region
+  - VNet1 => VNet2 and VNet2 <= VNet1
 - Enables **force tunnelling**
   - E.g. when all Internet traffic must go through on-premises firewall device.
   - You can use *user defined routes* for all outbound traffic to go back through VPN gateway to on-premises.
@@ -58,43 +50,96 @@
     - Name resolution needs configurations
       - You can't do with Azure provided DNS as all your hosts have then `internal.cloudapp.net`
       - In peering azure provided DNS won't work
-- ***Troubleshooting tips***
-  - Azure blocks ICMP between Vnets and the Internet
-    - ICMP is used for ping
-    - Microsoft blocks it because of DDoS attacks.
-  - Simplify NSGs as much as possible to reduce troubleshooting friction
-  - Azure portal Diagnose and solve problems/Resource health blade is useful
-  - Network Watcher and Network Permormance Monitor make troubleshooting much easier
-    - **Network Watcher**
-      - Shows where's the traffic is captured/denied
-      - Suite of tools
-        - **Topology**: e.g. VNETs, subnets, VMs, NICs
-        - **Variable Packet Capture**: Captures TCP packages at NIC level as wireshark files.
-        - **IP Flow Verify**: Troubleshoots NSG
-        - **Next hop**: Troubleshoots route tables
-        - **Connection troubleshoot**: Why it does not connect?
-        - Diagnostics Logging
-        - Security Group View
-        - NSG Flow Logging
-        - VPN Gateway Troubleshooting
-        - Network Subscription Limits
-        - Role Based Access Control
-      - In Portal you can search for Network Watcher and enable it on VMs
-    - **Network Performance Monitor**
-      - E.g. top network health events, ExpressRoute monitor, service endpoint monitor, performance monitor
-      - It ties in logs/metrics with Log Analytics.
-      - Part of Insights & Analytics Azure management solution.
-      - Works with installing Microsoft Monitoring Agent (MMA) in VM.
-      - ***Flow***
-        1. Deploy Insight & Analytics and then select Network Performance Monitor
-        2. Choose VM and click on "Connect", it'll install `MicrosoftMonitoringAgent`
+
+##### Peering configuration
+
+- **Allow forwarded traffic**
+  - Am I peering from a hub VNet that'll have IP-forwarder?
+  - Allow peers (other VNets) to forward traffic to go through.
+- **Allow gateway transit**
+  - Am I hosting a VPN gateway?
+- **Use remote gateways**
+  - Is this network use peers gateway?
+  - ❗ VNets must be in same region
+
+##### Peering troubleshooting tips
+
+- Azure blocks ICMP between VNets and the Internet
+  - ICMP is used for ping
+  - Microsoft blocks it because of DDoS attacks.
+- Simplify NSGs as much as possible to reduce troubleshooting friction
+- Azure portal Diagnose and solve problems/Resource health blade is useful
+- [Network Watcher](#network-watcher) and [Network Performance Monitor](#network-performance-monitor) make troubleshooting much easier
+
+###### Network Watcher
+
+- Shows where's the traffic is captured/denied
+- Suite of tools
+  - **Topology**
+    - E.g. VNETs, subnets, VMs, NICs
+  - **Variable Packet Capture**
+    - Captures TCP packages at NIC level as wireshark files.
+  - **IP Flow Verify**
+    - Troubleshoots NSG
+  - **Next hop**
+    - Troubleshoots route tables
+  - **Connection troubleshoot**
+    - Why it does not connect?
+  - Diagnostics Logging
+  - Security Group View
+  - NSG Flow Logging
+  - VPN Gateway Troubleshooting
+  - Network Subscription Limits
+  - Role Based Access Control
+- Can be enabled on VMs
+  - In Portal you can search for "Network Watcher" and enable
+
+###### Network Performance Monitor
+
+- Network monitoring solution for hybrid networks
+- E.g. top network health events, ExpressRoute monitor, service endpoint monitor, performance monitor
+- It ties in logs/metrics with Log Analytics.
+- Part of Insights & Analytics Azure management solution.
+- Works with installing Microsoft Monitoring Agent (MMA) in VM.
+- ***Flow***
+  1. Deploy Insight & Analytics and then select Network Performance Monitor
+  2. Choose VM and click on "Connect", it'll install `MicrosoftMonitoringAgent`
+
+#### VNet states
+
+- **Initiated**
+  - When a peering to the second virtual network from the first virtual network, the peering status is *Initiated* [2]
+  - A peering gets *Initiated* state by default once deployed and other node is missing
+  - For peering to be completed, one of the nodes must be on *Initiated* state before they're links
+- **Connected**
+  - Once peering is created from second VNet to first VNet that already has peering, peering status become *Connected*
+  - Peering status of first VNet change from *Initiated* to *Connected*
+  - ❗️ Peering is not established if status for both peerings is not *Connected*
+- **Disconnected**
+  - One of the links created was deleted [1]
+  - To re-establish a peering connection, there's two options
+    - Re-crate [1]
+      1. Delete the link
+      2. Recreate it
+    - Update, the state of *Disconnected* peering should be updated to *Initiated*:
+
+      ```sh
+        az network vnet peering update \
+          --name '<< pering name>>' \
+          --resource-group '<<resource-group-name>>' \
+          --vnet-name '<< prd-vnet-name >>' \
+          --set peeringState='Initiated'
+      ```
+
+[1]: https://github.com/MicrosoftDocs/azure-docs/blob/bf1c1c29f49daa86d805262b381685ab3f2b101f/articles/virtual-network/virtual-networks-faq.md#my-vnet-peering-connection-is-in-disconnected-state-why-cant-i-create-a-peering-connection
+[2]: https://github.com/MicrosoftDocs/azure-docs/blob/437febd11602909bb9de28661c0f1a68ba071a10/articles/virtual-network/virtual-network-manage-peering.md#requirements-and-constraints
 
 ### Hybrid Connections
 
 #### Site-to-site VPN
 
 - Two VPN devices connect to each other.
-- ***Flow***
+- **Flow**
   1. Deploy a ***VPN Gateway*** resource in Azure
      - Requires gateway subnet (or DMZ subnet).
      - Different SKUs: Basic, VpnGw1, VpnGw2, VpnGw3
@@ -126,19 +171,19 @@
   4. Install on individual endpoints (e.g. laptops)
 - Allows connection outside network perimeter
 
-#### Express route
+#### Azure ExpressRoute
 
 - High speed secure connection between on-prem and cloud
 
 #### Best practices for High Availability
 
-- ***Combine ExpressRoute and VPN***
+- **Combine ExpressRoute and VPN**
   - In gateway subnet
     - Deploy ExpressRoute gateway
     - Deploy VPN Gateway
-  - Both gateways gives access to front-end tier and a jumpbox in a management subnet
+  - Both gateways gives access to front-end tier and a jump box in a management subnet
   - If ExpressRoute goes down VPN gateway gets activated
-- ***Deploy two VPNs***
+- **Deploy two VPNs**
   - Requires enabling BGP in gateway link
     - Robust routing
     - Enable active-to-active connection configuration
@@ -152,12 +197,12 @@
 - **Situations**
   - You need to move one VM to another VNet.
     - It requires re-deploying
-  - Isolation & segmentations
+  - Isolation and segmentations
     - E.g. development / production VNet
   - **Hub & Spoke Topology**
-    - *Hub*: VNet have Virtual Network Appliance (e.g. firewall), or gateway
-      - You don't want to have *Virtual Network Appliance* as it costs both money and resources.
-    - *Spokes*
+    - **Hub**: VNet have Virtual Network Appliance (e.g. firewall), or gateway
+      - ❗️ *Virtual Network Appliance* as it costs both money and resources.
+    - **Spokes**
       - Other VNets (e.g. front-end, back-end)
       - You can force communicates with each other through Hub.
 - Internet calls and calls from internet
